dfir_rs/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.stderr
error[E0277]: the trait bound `impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_pipes::push::fanout::Fanout<impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <Accumulate<FoldState<&mut SetUnion<HashSet<u32>>, {closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:19: 7:75}, SetUnion<HashSet<u32>>, SetUnion<_>>, dfir_pipes::push::map::Map<impl dfir_pipes::push::Push<SetUnion<HashSet<u32>>, (), CanPend = <dfir_pipes::push::for_each::ForEach<{closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:88: 7:91}> as dfir_pipes::push::Push<SetUnion<HashSet<u32>>, ()>>::CanPend>, {closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:19: 7:75}>> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>, impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_pipes::push::for_each::ForEach<fn(SetUnion<_>) {std::mem::drop::<SetUnion<_>>}> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>: dfir_pipes::push::Push<{integer}, ()>` is not satisfied
 --> tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:6:50
  |
6 |         my_tee = source_iter([1, 2, 3, 4, 5]) -> tee();
  |                  --------------------------------^^^^^
  |                  |                               |
  |                  |                               unsatisfied trait bound
  |                  required by a bound introduced by this call
  |
  = help: the trait `dfir_pipes::push::Push<{integer}, ()>` is not implemented for `impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_pipes::push::fanout::Fanout<impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <Accumulate<FoldState<&mut SetUnion<HashSet<u32>>, {closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:19: 7:75}, SetUnion<HashSet<u32>>, SetUnion<_>>, dfir_pipes::push::map::Map<impl dfir_pipes::push::Push<SetUnion<HashSet<u32>>, (), CanPend = <dfir_pipes::push::for_each::ForEach<{closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:88: 7:91}> as dfir_pipes::push::Push<SetUnion<HashSet<u32>>, ()>>::CanPend>, {closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:19: 7:75}>> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>, impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_pipes::push::for_each::ForEach<fn(SetUnion<_>) {std::mem::drop::<SetUnion<_>>}> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>`
  = help: the following other types implement trait `dfir_pipes::push::Push<Item, Meta>`:
            `&mut P` implements `dfir_pipes::push::Push<Item, Meta>`
            `Accumulate<State, Next>` implements `dfir_pipes::push::Push<<State as AccumState>::Input, ()>`
            `DemuxEnum<Outputs>` implements `dfir_pipes::push::Push<Item, Meta>`
            `FoldKeyed<&mut HashMap<K, Acc, S>, InitFn, CombFn, Next, K, V, Acc>` implements `dfir_pipes::push::Push<(K, V), ()>`
            `ReduceKeyed<&mut HashMap<K, V, S>, ReduceFn, Next, K, V>` implements `dfir_pipes::push::Push<(K, V), ()>`
            `ResolveFutures<Psh, Queue, QueueInner>` implements `dfir_pipes::push::Push<Fut, ()>`
            `Sort<Item, Next>` implements `dfir_pipes::push::Push<Item, ()>`
            `StatePush<'a, Item, MappingFn, ItemsPsh, StatePsh, Lat>` implements `dfir_pipes::push::Push<Item, ()>`
          and $N others
note: required by a bound in `pivot_run_sg_1v1`
 --> tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:6:18
  |
6 |         my_tee = source_iter([1, 2, 3, 4, 5]) -> tee();
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `pivot_run_sg_1v1`

error[E0277]: the trait bound `impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_pipes::push::fanout::Fanout<impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <Accumulate<FoldState<&mut SetUnion<HashSet<u32>>, {closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:19: 7:75}, SetUnion<HashSet<u32>>, SetUnion<_>>, dfir_pipes::push::map::Map<impl dfir_pipes::push::Push<SetUnion<HashSet<u32>>, (), CanPend = <dfir_pipes::push::for_each::ForEach<{closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:88: 7:91}> as dfir_pipes::push::Push<SetUnion<HashSet<u32>>, ()>>::CanPend>, {closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:19: 7:75}>> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>, impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_pipes::push::for_each::ForEach<fn(SetUnion<_>) {std::mem::drop::<SetUnion<_>>}> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>: dfir_pipes::push::Push<{integer}, ()>` is not satisfied
 --> tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:6:18
  |
6 |         my_tee = source_iter([1, 2, 3, 4, 5]) -> tee();
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
  = help: the trait `dfir_pipes::push::Push<{integer}, ()>` is not implemented for `impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_pipes::push::fanout::Fanout<impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <Accumulate<FoldState<&mut SetUnion<HashSet<u32>>, {closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:19: 7:75}, SetUnion<HashSet<u32>>, SetUnion<_>>, dfir_pipes::push::map::Map<impl dfir_pipes::push::Push<SetUnion<HashSet<u32>>, (), CanPend = <dfir_pipes::push::for_each::ForEach<{closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:88: 7:91}> as dfir_pipes::push::Push<SetUnion<HashSet<u32>>, ()>>::CanPend>, {closure@$DIR/tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:7:19: 7:75}>> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>, impl dfir_pipes::push::Push<SetUnion<_>, (), CanPend = <dfir_pipes::push::for_each::ForEach<fn(SetUnion<_>) {std::mem::drop::<SetUnion<_>>}> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>> as dfir_pipes::push::Push<SetUnion<_>, ()>>::CanPend>`
  = help: the following other types implement trait `dfir_pipes::push::Push<Item, Meta>`:
            `&mut P` implements `dfir_pipes::push::Push<Item, Meta>`
            `Accumulate<State, Next>` implements `dfir_pipes::push::Push<<State as AccumState>::Input, ()>`
            `DemuxEnum<Outputs>` implements `dfir_pipes::push::Push<Item, Meta>`
            `FoldKeyed<&mut HashMap<K, Acc, S>, InitFn, CombFn, Next, K, V, Acc>` implements `dfir_pipes::push::Push<(K, V), ()>`
            `ReduceKeyed<&mut HashMap<K, V, S>, ReduceFn, Next, K, V>` implements `dfir_pipes::push::Push<(K, V), ()>`
            `ResolveFutures<Psh, Queue, QueueInner>` implements `dfir_pipes::push::Push<Fut, ()>`
            `Sort<Item, Next>` implements `dfir_pipes::push::Push<Item, ()>`
            `StatePush<'a, Item, MappingFn, ItemsPsh, StatePsh, Lat>` implements `dfir_pipes::push::Push<Item, ()>`
          and $N others
note: required by a bound in `pivot_run_sg_1v1`
 --> tests/compile-fail/nightly/surface_lattice_fold_push_wrongtype.rs:6:18
  |
6 |         my_tee = source_iter([1, 2, 3, 4, 5]) -> tee();
  |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `pivot_run_sg_1v1`
